fix next video overflow, update schema
merges cea40e2, fc7bc26

--- a/www/less/pages/course.less
+++ b/www/less/pages/course.less
@@ -541,7 +541,7 @@
 	  }
 	  .right {
 		float: right;
-		width: 250px;
+		width: 340px;
 		text-align: right;
 		a {
 		  .clearfix;
@@ -550,8 +550,8 @@
 		  min-width: 170px;
 		  width: auto;
 		  color: @white;
-		  padding-left: 25px;
-		  padding-right: 20px;
+		  padding-left: 15px;
+		  padding-right: 10px;
 		  line-height: 69px;
 		  -webkit-transform: scale3d(1,1,1); // fix sticky hover bug
 		  &:hover {
@@ -560,12 +560,18 @@
 		  span {
 			float: left;
 			font-size: 16px;
+			line-height: 1.2;
+			max-width: 220px;
+			margin-top: 25px;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		  }
 		  small {
 			float: left;
 			font-size: 11px;
 			color: @header-border;
-			margin-left: 4px;
+			margin-left: 6px;
 		  }
 		  i {
 			float: left;
